--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jason Moore Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jason Moore Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <link rel="stylesheet" href="public/css/styling.css">
 </head>
+
 <body>
+  <nav class="navbar">
+    <div class="container" id="navContainer">
+      <div class="navbar-brand">
+        <a class="navbar-item">
+          <img src="" alt="Logo">
+        </a>
+      </div>
+      <div id="navbarMenuHeroA" class="navbar-menu">
+        <div class="navbar-end">
+          <a class="navbar-item is-active">
+            About Me
+          </a>
+          <a class="navbar-item">
+            Portfolio
+          </a>
+          <a class="navbar-item">
+            Contact Info
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="section">
+    <h2>About Me</h2>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe facere rerum neque laudantium molestias aperiam asperiores in veritatis aliquid dolorem facilis quia dolorum accusantium qui blanditiis necessitatibus, error nostrum nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vitae laudantium eligendi nam, nostrum architecto culpa repudiandae consectetur sit ex praesentium. Aut, cum dolorum molestiae sed iure aliquam labore quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae, quis autem perspiciatis distinctio placeat vero nostrum iste. Modi ab tenetur, magni fugiat quidem sapiente tempore nam corrupti eos odit. 
+    </p>
     
+  </div>
+
+  <div class="footer">
+    <div class="content has-text-centered">
+      <p>
+        Product of <strong>Jason L. Moore</strong>
+      </p>
+    </div>
+  </div>
 </body>
+
 </html>
