layout of home(index.html) created. css still needed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Jason Moore Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  <link rel="stylesheet" href="public/css/styling.css">
+  <link rel="stylesheet" href="assets/css/styling.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <div class="container" id="navContainer">
       <div class="navbar-brand">
         <a class="navbar-item">
-          <img src="" alt="Logo">
+          <img src="" alt="JLM Logo">
         </a>
       </div>
       <div id="navbarMenuHeroA" class="navbar-menu">
@@ -35,12 +35,97 @@
   </nav>
 
   <div class="section">
-    <h2>About Me</h2>
+    <div class="container">
+      <div class="tile is-ancestor">
+        <div class="tile is-parent is-vertical is-8">
+          <div class="tile">
+            <div class="tile is-parent is-5">
+              <div class="tile">
+                <img src="assets/img/alt-awesome-o.jpg" alt="IMG PlaceHolder">
+              </div>
+            </div>
+            <div class="tile is-parent is-5">
+              <div class="tile">
+                <div class="article">
+                  <div class="content">
+                    <p class="title">Social Media</p>
+                    <ul>
+                      <li>LinkedIn</li>
+                      <li>GitHub</li>
+                    </ul>  
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tile">
+            <div class="article">
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni eum, dolores quidem vel fuga optio ad
+                  quod id, illum unde inventore molestias! Corrupti voluptate eaque aperiam doloremque totam temporibus
+                  quibusdam.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="tile">
+            <div class="article">
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas expedita tempore itaque repudiandae
+                  iure, amet deleniti soluta accusamus rerum sunt dolor corporis. Sequi expedita necessitatibus, est quos
+                  ut beatae provident!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tile is-parent is-vertical is-4">
+          <div class="tile">
+            <div class="article">
+              <div class="content">
+                <p class="title">About Me</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe facere rerum neque laudantium molestias
+                  aperiam asperiores in veritatis aliquid dolorem facilis quia dolorum accusantium qui blanditiis
+                  necessitatibus, error nostrum nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
+                  vitae
+                  laudantium eligendi nam, nostrum architecto culpa repudiandae consectetur sit ex praesentium. Aut, cum
+                  dolorum molestiae sed iure aliquam labore quasi. Lorem ipsum dolor sit amet consectetur adipisicing
+                  elit.
+                  Necessitatibus recusandae, quis autem perspiciatis distinctio placeat vero nostrum iste. Modi ab
+                  tenetur,
+                  magni fugiat quidem sapiente tempore nam corrupti eos odit.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="container">
+  </div>
+
+
+  <div class="level">
+    <div class="levle-left">
+    </div>
+  </div>
+  </div>
+
+  <div class="column">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe facere rerum neque laudantium molestias aperiam asperiores in veritatis aliquid dolorem facilis quia dolorum accusantium qui blanditiis necessitatibus, error nostrum nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vitae laudantium eligendi nam, nostrum architecto culpa repudiandae consectetur sit ex praesentium. Aut, cum dolorum molestiae sed iure aliquam labore quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus recusandae, quis autem perspiciatis distinctio placeat vero nostrum iste. Modi ab tenetur, magni fugiat quidem sapiente tempore nam corrupti eos odit. 
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium voluptates autem totam! Numquam
+      voluptas voluptates quis facilis voluptatum. Neque quibusdam atque cumque accusamus aliquid veniam iste animi
+      voluptas. Quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime assumenda iste distinctio
+      dolore laudantium praesentium eaque accusamus iure neque tempore earum esse at, ut sed a iusto id! Facere, a.
     </p>
-    
+  </div>
+  </div>
+
   </div>
 
   <div class="footer">
