navbar added for folio.html & contact.html

--- a/public/html/folio.html
+++ b/public/html/folio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,28 @@
 </head>
 
 <body>
-
+  <nav class="navbar">
+    <div class="container" id="navContainer">
+      <div class="navbar-brand">
+        <a class="navbar-item">
+          <img src="" alt="JLM Logo">
+        </a>
+      </div>
+      <div id="navbarMenuHeroA" class="navbar-menu">
+        <div class="navbar-end">
+          <a class="navbar-item">
+            About Me
+          </a>
+          <a class="navbar-item is-active">
+            Portfolio
+          </a>
+          <a class="navbar-item">
+            Contact Info
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
 </body>
 
 </html>
