--- a/public/html/folio.html
+++ b/public/html/folio.html
@@ -33,6 +33,14 @@
       </div>
     </div>
   </nav>
+
+  <div class="footer">
+    <div class="content has-text-centered">
+      <p>
+        Product of <strong>Jason L. Moore</strong>
+      </p>
+    </div>
+  </div>
 </body>
 
 </html>
