save before break

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
       <div id="navbarMenuHeroA" class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item is-active">
+          <a class="navbar-item is-active" href="index.html">
             About Me
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="public/html/folio.html">
             Portfolio
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="public/html/folio.html">
             Contact Info
           </a>
         </div>
